# llm-serving-from-scratch

./: pyproject.toml
llm_serving/multi_model/app/: engine.py  manager.py  server.py  store.py  worker.py
llm_serving/multi_model/config/: models.json
llm_serving/multi_model/tests/: test_models.py  test_triton_densenet.py
llm_serving/single_model/: main.py
llm_serving/single_model/llm/: __init__.py  llm.py  model_executor.py  model_manager.py  model_worker.py  workload_manager.py
llm_serving/single_model/tests/: test_api.py  test_vllm.py
playground/concurrency/: main.py
playground/webapp/: main.py
tests/multi_model/: test_models.py  test_triton_densenet.py
tests/single_model/: test_api.py  test_stream.sh  test_vllm.py
